# NiaARM-GUI

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
Datasets/: 2022_2023_football_summer_transfers.csv  2022_2023_football_summer_transfers_v2.csv  2022_2023_football_summer_transfers_v3.csv  2022_2023_football_summer_transfers_v4.csv  global_cars_dataset_synthetic.csv  student.csv
niaarm_gui/: __init__.py  antecedent_consequent_display.py  csv_viewer.py  dialogs.py  main_window.py  mining_results_viewer.py  models.py
tests/: conftest.py  test_niaarm_gui.py
tests/integration/: test_mining_flow.py
tests/test_data/datasets/: semicolon.csv
tests/test_data/mining_results/: iris_pso.csv
tests/test_data/pipelines/: ga_test_pipeline.json  missing_dataset.json
tests/unit/: test_csv_viewer.py  test_dialogs.py  test_main_window.py  test_mining_results_viewer.py
