[tool.poetry]
name = "niaarm-gui"
version = "0.1.0"
description = "Graphical user interface for numerical association rule mining"
authors = ["Dario Zadravec <dario.zadravec@student.um.si>"]
license = "MIT"
readme = "README.md"
packages = [{include = "niaarm_gui"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
PyQt6 = ">=6.8.0,<6.8.1"
niaarm = "^0.3.12"
niapy = "^2.3.1"
pandas = "^2.2.0"
matplotlib = "^3.8.2"
plotly = "^5.18.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-qt = "^4.4.0"
pytest-timeout = "^2.3.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[tool.poetry.scripts]
niaarm-gui = "niaarm_gui.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"